--- a/index.html
+++ b/index.html
@@ -1,64 +1,87 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]-->
+<!--[if IE 7]>    <html class="ie7 oldie"> <![endif]-->
+<!--[if IE 8]>    <html class="ie8 oldie"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="">
+<!--<![endif]-->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Untitled Document</title>
-<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
-<link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-body,td,th {
-	color: #003;
-}
-body {
-	background-color: #FFf;
-	margin-left: 10%;
-}
-</style>
-</head>
+<link href="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/boilerplate.css" rel="stylesheet" type="text/css">
+<link href="index.css" rel="stylesheet" type="text/css">
+<link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+<!-- 
+To learn more about the conditional comments around the html tags at the top of the file:
+paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
 
-<body class="MenuBarActive">
-<ul id="MenuBar1" class="MenuBarHorizontal">
-  <li>
-    <div align="center"><a href="#">Home</a> </div>
-  </li>
-  <li>
-    <div align="center"><a href="#" class="MenuBarItemSubmenu">Interests</a>
+Do the following if you're using your customized build of modernizr (http://www.modernizr.com/):
+* insert the link to your js here
+* remove the link below to the html5shiv
+* add the "no-js" class to the html tags at the top
+* you can also remove the link to respond.min.js if you included the MQ Polyfill in your modernizr build 
+-->
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<script src="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/respond.min.js"></script>
+<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+</head>
+<body>
+<div class="gridContainer clearfix">
+  <ul id="MenuBar1" class="MenuBarHorizontal">
+    <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
+    <li><a href="#">Interests</a></li>
+    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-        <li><a href="#">Engineering</a></li>
-        <li><a href="#">Origami</a></li>
-        <li><a href="#">Photography</a></li>
-      </ul>
-    </div>
-  </li>
-  <li>
-    <div align="center"><a class="MenuBarItemSubmenu" href="#">Projects</a>
-      <ul>
-        <li><a class="MenuBarItemSubmenu" href="#">Team 188</a>
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics1</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
             <li><a href="#">Blizzard XI</a></li>
             <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIV</a></li>
+            <li><a href="#">Blizzard XIII</a></li>
           </ul>
         </li>
+        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
+          <ul>
+            <li><a href="#">2009</a></li>
+            <li><a href="#">2010</a></li>
+            <li><a href="#">2011</a></li>
+            <li><a href="#">2012</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Skills Robotics</a></li>
         <li><a href="#">F1 in Schools</a></li>
-        <li><a href="#">Skills Robotics Competition</a></li>
-        <li><a href="#">VEX Robotics</a></li>
-        <li><a href="#">Formula Hybrid</a></li>
-        <li><a href="#">McMaster EcoCAR3</a></li>
+        <li><a href="#">McMaster Sumobot</a></li>
+        <li><a href="#">McMaster Formula Hybrid</a></li>
+        <li><a href="#">Untitled Item</a></li>
       </ul>
-    </div>
-  </li>
-  <li>
-    <div align="center"><a href="#">Contact</a></div>
-  </li>
-  <div align="center" class="MenuBarActive"></div>
-</ul>
+    </li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</div>
+<div id="AboutMe">
+<div id="AboutMeText">
+  <h1> About Me </h1>
+<p>I am a mechatronics engineerig student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
+<div id="AboutMePhoto"><p><img src="../Me.jpg"></p>
+</div>
+</div>
 <p>&nbsp;</p>
-<h1>About Me</h1>
-<p>&nbsp;</p>
-<div align="center"> </div>
-<pre><script type="text/javascript"> var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});     </script>
-</pre>
+<div id="Interest">
+  <div id="Interests"><h1>Interests</h1></div>
+  <div id="Image1"><h2>Origami<img src="Untitled-1.jpg"></h2>
+</div>
+  <div id="Image2"><h2>Travelling<img src="Untitled-2.jpg"></h2></div>
+  <div id="Image3"><h2>Robots<img src="Untitled-3.jpg"></h2></div>
+  <p>&nbsp;</p>
+</div>
+<div id="Project">
+  <div id="ProjectText"><h1>Projects</h1></div>
+</div>
+<script type="text/javascript">
+var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+</script>
 </body>
 </html>
