background color change

--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div id="AboutMeText">
   <h1> About Me </h1>
 <p>I am a mechatronics engineerig student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
-<div id="AboutMePhoto"><p><img src="../11062379_10200468276227128_3031736896492371818_o.jpg"></p>
+<div id="AboutMePhoto"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
 </div>
 </div>
-<p>&nbsp;</p>
 <div id="Interest">
   <div id="Interests"><h1>Interests</h1></div>
   <div id="Image1"><h2>Origami<img src="Untitled-1.jpg"></h2>
