--- a/index.html
+++ b/index.html
@@ -61,23 +61,29 @@ Do the following if you're using your customized build of modernizr (http://www.
     <li><a href="#">Contact</a></li>
   </ul>
 </div>
-<div id="AboutMe">
+<div class="Block" id="AboutMe">
 <div id="AboutMeText">
   <h1> About Me </h1>
 <p>I am a mechatronics engineerig student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
-<div id="AboutMePhoto"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
+<div id="AboutMePhoto" Class="Title"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
 </div>
 </div>
-<div id="Interest">
-  <div id="Interests"><h1>Interests</h1></div>
-  <div id="Image1"><h2>Origami<img src="Untitled-1.jpg"></h2>
+<div class="Block" id="Interest">
+  <div class="Title"><h1>Interests</h1></div>
+  <div class="Attribute"><h2>Origami<img src="Untitled-1.jpg"></h2>
 </div>
-  <div id="Image2"><h2>Travelling<img src="Untitled-2.jpg"></h2></div>
-  <div id="Image3"><h2>Robots<img src="Untitled-3.jpg"></h2></div>
-  <p>&nbsp;</p>
+  <div class="Attribute"><h2>Travelling<img src="Untitled-2.jpg"></h2></div>
+  <div class="Attribute"><h2>Robots<img src="Untitled-3.jpg"></h2></div>
 </div>
-<div id="Project">
-  <div id="ProjectText"><h1>Projects</h1></div>
+<div class="Block" id="Project">
+  <div class="Title"><h1>Projects</h1></div>
+  <div class="Attribute"><h2> Formula Hybrid</h2></div>
+  <div class="Attribute"><h2>SuboBot COmpetition</h2></div>
+  <div class="Attribute"><h2>First Robotics</h2></div>
+  <div class="Attribute"><h2>F1 in Schools</h2></div>
+  <div class="Attribute"><h2>VEX Robotics</h2></div>
+  <div class="Attribute"><h2>Skills Robotics</h2></div>
+
 </div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
