--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Untitled Document</title>
+<title>About Prakhar Garg</title>
 <link href="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -29,6 +29,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 <body>
+<h1 style="color:#FF0000;background-color:#00FF66;">This website is currently under construction</h1>
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
@@ -74,15 +75,26 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
   <div class="Attribute"><h2>Travelling<img src="Untitled-2.jpg"></h2></div>
   <div class="Attribute"><h2>Robots<img src="Untitled-3.jpg"></h2></div>
+  <div class="Attribute"><h2>Photography</h2></div>
 </div>
 <div class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
-  <div class="Attribute"><h2> Formula Hybrid</h2></div>
-  <div class="Attribute"><h2>SuboBot COmpetition</h2></div>
-  <div class="Attribute"><h2>First Robotics</h2></div>
+  <div class="Attribute"><h2>EcoCAR3</h2></div>
+  <div class="Attribute"><h2>Formula Hybrid</h2></div>
+  <div class="Attribute"><h2>Strangers</h2></div>
+  <div class="Attribute"><h2>QuadSim</h2></div>
+  <div class="Attribute"><h2>SuboBot Competition</h2></div>
+  <div class="Attribute"><h2>Analog to Digital Converter</h2></div>
+  <div class="Attribute"><h2>FIRST Robotics</h2></div>
   <div class="Attribute"><h2>F1 in Schools</h2></div>
   <div class="Attribute"><h2>VEX Robotics</h2></div>
   <div class="Attribute"><h2>Skills Robotics</h2></div>
+</div>
+<div class="Block" id="Community">
+  <div class="Title"><h1>Community Involvment</h1></div>
+  <div class="Attribute"><h2>Mentorship</h2></div>
+  <div class="Attribute"><h2>Volunteering</h2></div>
+  <div class="Attribute"><h2>Allumni Group</h2></div>
 
 </div>
 <script type="text/javascript">
