some images in projects

--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 <div class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
-  <div class="Attribute"><h2>EcoCAR3</h2></div>
-  <div class="Attribute"><h2>Formula Hybrid</h2></div>
-  <div class="Attribute"><h2>Strangers</h2></div>
+  <div class="Attribute"><h2>EcoCAR3<img src="10314570_791737187547731_7611673542938501951_n.jpg" width=100%></h2>
+  </div>
+  <div class="Attribute"><h2>Formula Hybrid<img src="11174408_827087687367306_2742407170015155292_o.jpg" width=100%></h2>
+  </div>
+  <div class="Attribute"><h2>Strangers<img src="../Downloads/Screenshot_2015-05-30-14-39-14.jpg" width=100%></h2>
+  </div>
   <div class="Attribute"><h2>QuadSim</h2></div>
   <div class="Attribute"><h2>SuboBot Competition</h2></div>
   <div class="Attribute"><h2>Analog to Digital Converter</h2></div>
