some images in projects

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   </div>
   <div class="Attribute"><h2>Formula Hybrid<img src="11174408_827087687367306_2742407170015155292_o.jpg" width=100%></h2>
   </div>
-  <div class="Attribute"><h2>Strangers<img src="../Downloads/Screenshot_2015-05-30-14-39-14.jpg" width=100%></h2>
+  <div class="Attribute"><h2>Strangers<img src="Screenshot_2015-05-30-14-39-14.jpg" width=100%></h2>
   </div>
   <div class="Attribute"><h2>QuadSim</h2></div>
   <div class="Attribute"><h2>SuboBot Competition</h2></div>
