added more images

--- a/index.html
+++ b/index.html
@@ -81,16 +81,26 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div class="Title"><h1>Projects</h1></div>
   <div class="Attribute"><h2>EcoCAR3<img src="10314570_791737187547731_7611673542938501951_n.jpg" width=100%></h2>
   </div>
-  <div class="Attribute"><h2>Formula Hybrid<img src="11174408_827087687367306_2742407170015155292_o.jpg" width=100%></h2>
+  <div class="Attribute">
+    <h2>Formula Hybrid<img src="11174408_827087687367306_2742407170015155292_o.jpg" width=100%></h2>
   </div>
   <div class="Attribute"><h2>Strangers<img src="Screenshot_2015-05-30-14-39-14.jpg" width=100%></h2>
   </div>
-  <div class="Attribute"><h2>QuadSim</h2></div>
-  <div class="Attribute"><h2>SuboBot Competition</h2></div>
-  <div class="Attribute"><h2>Analog to Digital Converter</h2></div>
-  <div class="Attribute"><h2>FIRST Robotics</h2></div>
-  <div class="Attribute"><h2>F1 in Schools</h2></div>
-  <div class="Attribute"><h2>VEX Robotics</h2></div>
+  <div class="Attribute">
+    <h2>QuadSim<img src="DSC04541.jpg" width=100%></h2>
+  </div>
+  <div class="Attribute"><h2>SuboBot <img src="../../../Downloads/20141110_024828.jpg" width=100%></h2>
+  </div>
+  <div class="Attribute">
+    <h2>Class Projects<img src="../../../Downloads/Unggggg.jpg" width="100"></h2>
+  </div>
+  <div class="Attribute">
+    <h2>FIRST Robotics<img src="../../../Downloads/first_logo_1.jpg" width="100%"></h2>
+  </div>
+  <div class="Attribute"><h2>F1 in Schools<img src="../../../Downloads/F1_in_Schools_logo.jpg" width="100%"></h2>
+  </div>
+  <div class="Attribute"><h2>VEX Robotics<img src="../../../Downloads/vrc.jpg" width="100%"></h2>
+  </div>
   <div class="Attribute"><h2>Skills Robotics</h2></div>
 </div>
 <div class="Block" id="Community">
