--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div class="Attribute">
     <h2>QuadSim<img src="DSC04541.jpg" width=100%></h2>
   </div>
-  <div class="Attribute"><h2>SuboBot <img src="../../../Downloads/20141110_024828.jpg" width=100%></h2>
+  <div class="Attribute"><h2>SuboBot <img src="20141110_024828.jpg" width=100%></h2>
   </div>
   <div class="Attribute">
-    <h2>Class Projects<img src="../../../Downloads/Unggggg.jpg" width="100"></h2>
+    <h2>Class Projects<img src="Unggggg.jpg" width="100"></h2>
   </div>
   <div class="Attribute">
-    <h2>FIRST Robotics<img src="../../../Downloads/first_logo_1.jpg" width="100%"></h2>
+    <h2>FIRST Robotics<img src="first_logo_1.jpg" width="100%"></h2>
   </div>
-  <div class="Attribute"><h2>F1 in Schools<img src="../../../Downloads/F1_in_Schools_logo.jpg" width="100%"></h2>
+  <div class="Attribute"><h2>F1 in Schools<img src="F1_in_Schools_logo.jpg" width="100%"></h2>
   </div>
-  <div class="Attribute"><h2>VEX Robotics<img src="../../../Downloads/vrc.jpg" width="100%"></h2>
+  <div class="Attribute"><h2>VEX Robotics<img src="vrc.jpg" width="100%"></h2>
   </div>
   <div class="Attribute"><h2>Skills Robotics</h2></div>
 </div>
