Broken Links PLEASE WORK now

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div class="Attribute"><h2>Strangers<img src="Screenshot_2015-05-30-14-39-14.jpg" width=100%></h2>
   </div>
   <div class="Attribute">
-    <h2>QuadSim<img src="DSC04541.JPG" width="100%""></h2>
+    <h2>QuadSim<img src="QuadSIM.JPG" width="100%""></h2>
   </div>
   <div class="Attribute"><h2>SuboBot <img src="20141110_024828.jpg" width=100%></h2>
   </div>
