--- a/index.html
+++ b/index.html
@@ -84,28 +84,51 @@ Do the following if you're using your customized build of modernizr (http://www.
     	<h2>EcoCAR3<img src="Project EcoCAR3.jpg" width=100%></h2>
   	</div>
   </a>
-  <div class="Attribute">
-    <h2>Formula Hybrid<img src="Project Formula Hybrid.jpg" width=100%></h2>
-  </div>
-  <div class="Attribute"><h2>Strangers<img src="Project Strangers.jpg" width=100%></h2>
-  </div>
-  <div class="Attribute">
-    <h2>QuadSim<img src="Project QuadSIM.JPG" width="100%""></h2>
-  </div>
-  <div class="Attribute"><h2>SuboBot <img src="Project SumoBot.jpg" width=100%></h2>
-  </div>
-  <div class="Attribute">
-    <h2>Class Projects<img src="Project Class.jpg" width="100"></h2>
-  </div>
-  <div class="Attribute">
-    <h2>FIRST Robotics<img src="Project FIRST.jpg" width="100%"></h2>
-  </div>
-  <div class="Attribute"><h2>F1 in Schools<img src="Project F1.jpg" width="100%"></h2>
-  </div>
-  <div class="Attribute"><h2>VEX Robotics<img src="Project VEX.jpg" width="100%"></h2>
-  </div>
-  <div class="Attribute"><h2>Skills Robotics<img src="Project Skills.jpg" width="100%"></h2>
-  </div>
+  <a href="http://www.formula-hybrid.org/">
+    <div class="Attribute">
+      <h2>Formula Hybrid<img src="Project Formula Hybrid.jpg" width=100%></h2>
+    </div>
+  </a>
+  <a href="https://github.com/SNavleen/Stranger">
+    <div class="Attribute">
+      <h2>Strangers<img src="Project Strangers.jpg" width=100%></h2>
+    </div>
+  </a>
+  <a href="https://github.com/SNavleen/QuadSim">
+    <div class="Attribute">
+      <h2>QuadSim<img src="Project QuadSIM.JPG" width="100%"></h2>
+    </div>
+  </a>
+  <a href="https://www.facebook.com/McMasterSumoBot?fref=ts">  
+    <div class="Attribute">
+      <h2>SuboBot <img src="Project SumoBot.jpg" width=100%></h2>
+    </div>
+  </a>
+  <a href="">
+    <div class="Attribute">
+      <h2>Class Projects<img src="Project Class.jpg" width="100"></h2>
+    </div>
+  </a>
+  <a href="http://www.firstroboticscanada.org/main/">
+    <div class="Attribute">
+      <h2>FIRST Robotics<img src="Project FIRST.jpg" width="100%"></h2>
+    </div>
+  </a>
+  <a href="http://www.f1inschools.com/">
+    <div class="Attribute">
+      <h2>F1 in Schools<img src="Project F1.jpg" width="100%"></h2>
+    </div>
+  </a>
+  <a href="http://www.vexrobotics.com/">
+    <div class="Attribute">
+      <h2>VEX Robotics<img src="Project VEX.jpg" width="100%"></h2>
+    </div>
+  </a>
+  <a href="http://www.skillsontario.com/">
+    <div class="Attribute">
+      <h2>Skills Robotics<img src="Project Skills.jpg" width="100%"></h2>
+    </div>
+  </a>
 </div>
 <div class="Block" id="Community">
   <div class="Title"><h1>Community Involvment</h1></div>
