making second webpage..EcoCAR

--- a/index.html
+++ b/index.html
@@ -71,62 +71,112 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 <div class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
-  <div class="Attribute"><h2>Origami<img src="Interest Origami.jpg"></h2>
+  <div class="Attribute">
+    <h2>
+      Origami
+      <img src="Interests/Origami/Interest Origami.jpg">
+    </h2>
+  </div>
+  <div class="Attribute">
+    <h2>
+      Travelling
+      <img src="Interests/Travelling/Interest Travelling.jpg">
+    </h2>
+  </div>
+  <div class="Attribute">
+    <h2>
+      Robots
+      <img src="Interests/Robots/Interest Robot.jpg">
+    </h2>
+  </div>
+  <div class="Attribute">
+    <h2>
+      Photography
+    </h2>
+  </div>
 </div>
-  <div class="Attribute"><h2>Travelling<img src="Interest Travelling.jpg"></h2></div>
-  <div class="Attribute"><h2>Robots<img src="Interest Robot.jpg"></h2></div>
-  <div class="Attribute"><h2>Photography</h2></div>
-</div>
+
+
 <div class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
   <a href="EcoCAR3/index.html">
   	<div class="Attribute">
-    	<h2>EcoCAR3<img src="Project EcoCAR3.jpg" width=100%></h2>
+    	<h2>
+          EcoCAR3
+          <img src="Projects/EcoCAR/Project EcoCAR3.jpg" width=100%>
+        </h2>
   	</div>
   </a>
   <a href="http://www.formula-hybrid.org/">
     <div class="Attribute">
-      <h2>Formula Hybrid<img src="Project Formula Hybrid.jpg" width=100%></h2>
+      <h2>
+        Formula Hybrid
+        <img src="Projects/FormulaHybrid/Project Formula Hybrid.jpg" width=100%>
+      </h2>
     </div>
   </a>
   <a href="https://github.com/SNavleen/Stranger">
     <div class="Attribute">
-      <h2>Strangers<img src="Project Strangers.jpg" width=100%></h2>
+      <h2>
+        Strangers
+        <img src="Projects/Strangers/Project Strangers.jpg" width=100%>
+      </h2>
     </div>
   </a>
   <a href="https://github.com/SNavleen/QuadSim">
     <div class="Attribute">
-      <h2>QuadSim<img src="Project QuadSIM.JPG" width="100%"></h2>
+      <h2>
+        QuadSim
+        <img src="Projects/QuadSim/Project QuadSIM.JPG" width="100%">
+      </h2>
     </div>
   </a>
   <a href="https://www.facebook.com/McMasterSumoBot?fref=ts">  
     <div class="Attribute">
-      <h2>SuboBot <img src="Project SumoBot.jpg" width=100%></h2>
+      <h2>
+        SuboBot 
+        <img src="Projects/SumoBot/Project SumoBot.jpg" width=100%>
+      </h2>
     </div>
   </a>
   <a href="">
     <div class="Attribute">
-      <h2>Class Projects<img src="Project Class.jpg" width="100"></h2>
+      <h2>
+        Class Projects
+        <img src="Projects/Class/Project Class.jpg" width="100">
+      </h2>
     </div>
   </a>
   <a href="http://www.firstroboticscanada.org/main/">
     <div class="Attribute">
-      <h2>FIRST Robotics<img src="Project FIRST.jpg" width="100%"></h2>
+      <h2>
+        FIRST Robotics
+        <img src="Projects/FIRST/Project FIRST.jpg" width="100%">
+      </h2>
     </div>
   </a>
   <a href="http://www.f1inschools.com/">
     <div class="Attribute">
-      <h2>F1 in Schools<img src="Project F1.jpg" width="100%"></h2>
+      <h2>
+        F1 in Schools
+        <img src="Projects/F1/Project F1.jpg" width="100%">
+      </h2>
     </div>
   </a>
   <a href="http://www.vexrobotics.com/">
     <div class="Attribute">
-      <h2>VEX Robotics<img src="Project VEX.jpg" width="100%"></h2>
+      <h2>
+        VEX Robotics
+        <img src="Projects/VEX/Project VEX.jpg" width="100%">
+      </h2>
     </div>
   </a>
   <a href="http://www.skillsontario.com/">
     <div class="Attribute">
-      <h2>Skills Robotics<img src="Project Skills.jpg" width="100%"></h2>
+      <h2>
+        Skills Robotics
+        <img src="Projects/Skills/Project Skills.jpg" width="100%">
+      </h2>
     </div>
   </a>
 </div>
