kinda final EcoCar page?

--- a/Projects/EcoCAR/index.html
+++ b/Projects/EcoCAR/index.html
@@ -68,8 +68,14 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div class="Paragraph"><P>EcoCAR 3 is the latest in the U.S. Department of Energy (DOE) Advanced Vehicle Technology Competition (AVTC) series.  AVTCs represent a unique collaboration of government, industry, and academic partners who combine resources to explore sustainable transportation solutions.16 North American Universites have been challenged to re-engineer a Chevrolet Camaro into a hybrid-electric vehicle over a course of 4 years.</P></div>
 
   <div class="Paragraph"><P>This project has many different roles as each team is required to design, simulate, modify and test the vehicle powertrains. For the past year I have been involved with the low level software development of the car. I have helped program new functionality and in the process learned a lot about the development process of the car. During the year i have been able to apply my knowledge in C# to programming freescale processors and inturn execute cerain tasks. furthermore I was able to apply my knowledge about the software development process and create appropriate documentation before constructing efficient code.</P></div>
+
+    <div class="Image"><p><img src="freescale.png" width="100%"></p></div>
+    
   <div class="Paragraph"><P>Being a part of the team has tought me about all of the safety precautions taken while manufacturing a car.</P></div>
   
+    <div class="Image"><p><img src="EcoCAR3Camaro.jpg" width="100%"></p></div>
+
+ 
 </div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
