--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 
 <div class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
-  <a href="EcoCAR3/index.html">
+  <a href="Projects/EcoCAR/index.html">
   	<div class="Attribute">
     	<h2>
           EcoCAR3
