--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="http://www.f1inschools.com/">
+  <a href="http://velocitaracing.weebly.com/">
     <div class="Attribute">
       <h2>
         F1 in Schools
