--- a/Projects/FormulaHybrid/index.html
+++ b/Projects/FormulaHybrid/index.html
@@ -73,20 +73,16 @@ Do the following if you're using your customized build of modernizr (http://www.
 
     
   <div id="LayoutDiv2">
-    <div class="Image"><p><img src="11061189_825147770894631_8426436439548632526_n.jpg" width="960"></p></div>
-    <div class="Paragraph"><P>This project has many different roles as each team is required to design, simulate, 
-      modify and test the vehicle powertrains. For the past year I have been involved with the low level software development
-       of the car. I have helped program new functionality and in the process learned a lot about the development process of 
-       the car. During the year i have been able to apply my knowledge in C# to programming freescale processors and inturn 
-       execute cerain tasks. furthermore I was able to apply my knowledge about the software development process and create 
-       appropriate documentation before constructing efficient code.</P></div>
+    <div class="Image"><p><img src="11174923_10200597563339225_3579215265931089820_n.jpg" width="682"></p></div>
+    <div class="Paragraph">
+      <P>As a part of the <a href="http://www.formulahybrid.ca/#">McMaster Formula Hybrid team</a> I was able to work on the software and in turn help improve the performance of the car.I was responsible for working on the algorhythem to deteck and correct for the wheel slipping during acceleration and breaking events of the vehicle. I found this an excillent way to apply my knowledge of filters and real time systems from class. Filters were use to reduce noise in the system and help compensate for the sampling frequency that was limitted by the speed of the CAN network of the vehicle. Unfortunately time constraints didn't allow for the proper tesing of the software and a decision was made to not include the code during the competition to ensure the driver's safety.</P></div>
   </div>
   
 
    
 
   
-  <div><p><img src="11174923_10200597563339225_3579215265931089820_n.jpg" width="682"></p></div>
+  <div><p><img src="LaunchTractionControl.PNG" width="991"></p></div>
 
  
 </div>
