adding some links

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Do the following if you're using your customized build of modernizr (http://www.
         </h2>
   	</div>
   </a>
-  <a href="http://www.formula-hybrid.org/">
+  <a href="Projects/FormulaHybrid/index.html">
     <div class="Attribute">
       <h2>
         Formula Hybrid
