--- a/Projects/EcoCAR/index.html
+++ b/Projects/EcoCAR/index.html
@@ -66,7 +66,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>McMaster EcoCAR3</h1>
       <div id="LayoutDiv1">
 	      <div class="Image"><p><img src="10314570_791737187547731_7611673542938501951_n.jpg" width="100%"></p></div>
-          <div class="Paragraph"><P>EcoCAR 3 is the latest in the U.S. Department of Energy (DOE) Advanced Vehicle Technology
+          <div class="Paragraph"><P><a href="http://ecocar3.org/">EcoCAR 3</a> is the latest in the U.S. Department of Energy (DOE) Advanced Vehicle Technology
       Competition (AVTC) series.  AVTCs represent a unique collaboration of government, industry, and academic partners 
       who combine resources to explore sustainable transportation solutions.16 North American Universites have been 
       challenged to re-engineer a Chevrolet Camaro into a hybrid-electric vehicle over a course of 4 years.</P></div>
