--- a/Projects/FormulaHybrid/index.html
+++ b/Projects/FormulaHybrid/index.html
@@ -67,7 +67,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       <div id="LayoutDiv1">
 	      <div class="Image"><p><img src="Project Formula Hybrid.jpg" width="1476"></p></div>
           <div class="Paragraph">
-            <P>The <a href="http://www.formula-hybrid.org/">formula hybrid competition</a> takes place during the spring of every ye. It is regarded as the most complex and dynamic of the series of competitions hosted by the Society of Automotive Engineers for Collegiate Design. THe purpose of the competittion is to create the most efficient formula-style electric or plug-in hybrid racecar. Each car competes in numerous events to evaluate performance and fuelefficiency. During the event a special emphasis has ben put on innovating new ways and adapting new techniques to increase the performance of the vehicle. </P></div>
+            <P>The <a href="http://www.formula-hybrid.org/">Formula Hybrid Competition</a> takes place during the spring of every ye. It is regarded as the most complex and dynamic of the series of competitions hosted by the Society of Automotive Engineers for Collegiate Design. THe purpose of the competittion is to create the most efficient formula-style electric or plug-in hybrid racecar. Each car competes in numerous events to evaluate performance and fuelefficiency. During the event a special emphasis has ben put on innovating new ways and adapting new techniques to increase the performance of the vehicle. </P></div>
 </div>
 
 
