Completed Strangers and half of QuadSIM... Quadsim needs images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@ Do the following if you're using your customized build of modernizr (http://www.
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics1</a>
+		<li><a href="Projects/EcoCAR/index.html">
+			McMaster EcoCar3
+		</a></li>
+		<li><a href="Projects/FormulaHybrid/index.html">
+			McMaster Formula Hybrid
+		</a></li>
+        <li><a href="Projects/Strangers/index.html">
+			Strangers App
+		</a></li>	
+		<li><a href="Projects/QuadSim/index.html">
+			QuadSIM
+		</a></li>			
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
             <li><a href="#">Blizzard XI</a></li>
@@ -55,7 +67,7 @@ Do the following if you're using your customized build of modernizr (http://www.
         <li><a href="#">Skills Robotics</a></li>
         <li><a href="#">F1 in Schools</a></li>
         <li><a href="#">McMaster Sumobot</a></li>
-        <li><a href="#">McMaster Formula Hybrid</a></li>
+
         <li><a href="#">Untitled Item</a></li>
       </ul>
     </li>
@@ -115,7 +127,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="https://github.com/SNavleen/Stranger">
+  <a href="Projects/Strangers/index.html">
     <div class="Attribute">
       <h2>
         Strangers
@@ -123,7 +135,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="https://github.com/SNavleen/QuadSim">
+  <a href="Projects/QuadSim/index.html">
     <div class="Attribute">
       <h2>
         QuadSim
@@ -181,10 +193,10 @@ Do the following if you're using your customized build of modernizr (http://www.
   </a>
 </div>
 <div class="Block" id="Community">
-  <div class="Title"><h1>Community Involvment</h1></div>
+  <div class="Title"><h1>Community Involvement</h1></div>
   <div class="Attribute"><h2>Mentorship</h2></div>
   <div class="Attribute"><h2>Volunteering</h2></div>
-  <div class="Attribute"><h2>Allumni Group</h2></div>
+  <div class="Attribute"><h2>Alumni Group</h2></div>
 
 </div>
 <script type="text/javascript">
