--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -62,27 +62,27 @@ Do the following if you're using your customized build of modernizr (http://www.
   </ul>
 </div>
 <div class="Block" id="Strangers">
-  <h1>Strangers Android Application </h1>
+  <h1>Quad Sim </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="Screen 1.png" width="100%"></p></div>
+		<div class="Image"><p><img src="Project QuadSIM.JPG" width="100%"></p></div>
         <div class="Paragraph">
-			<P>Strangers is an android application developed by me and three of my peers at a hackathon in Duke University, HackDuke. The aim of the project was to develop a fun ecosystem for people to chat and communicate with strangers while using APIs provided by Facebook, FireBase and IBM. Over 24 hours my team and I planned and designed the app to scan your recent posts on facebook and pair you with someone who has the opposite personality as you. The aim of the app was to help connect people from different backgrounds and help the community appreciate the difference in personalties.</P>
+			<P>QuadSim was the first project I worked on in a hackathon. The aim of the project was to get familiar with Microsoft's Kinnect developer kit and use it to create an intuitive game. My group and I decided to create a quadcopter simulator where the hand movements would determine the yaw, pitch, and roll as well as the throttle speed. We used the Unitiy game engine to interface with the sensor and to control all aspects of the simulator. The sensor viewed the angles of both the player's hand and provided an experience similar to using the wheel on an airplane.</P>
 		</div>
 	</div>
 
 
     
   <div id="LayoutDiv2">
-    <div id="NudgeMe" class="Image"><p><img src="Screen 2.png" width="100%"></p></div>
+    <div class="Image"><p><img src="Project QuadSIM.JPG" width="100%"></p></div>
     <div class="Paragraph">
-      <P> While developing Strangers with my team I gained a lot of first hand experience and mentorship working with the Google android SDK and learning the basics of how to develop the front end of the application. The data we received from Facebook was packaged as a JSON file. Our app repackaged the file to better work with IBM's Bluemix servers. In Bluemix I learned how to code in node.js and interface with Watson. Watson was the computation engine responsible for analusing the data packets sent to bluemix and respond with a personality profile. The data was used to pair users who ere directed to a firebase script that allowed us to quickly set up a messenger feed between two users.</p></div>
+      <P> What I found exciting about this project was that i could apply my knowledge in mechanical design and simulation to create a basic simulator. The models in this project were designed on Autodesk Inventor and the textures were applied on Blender. This project was the first time I worked in a team for a pure software based application. Through this experience I learned how essential it is to create modular code. Furthermore my tem an I got a chance to be mentored by software developers from Microsoft and learned a lot about the Kinect sensor</P></div>
   </div>
   
   <div id="LayoutDiv2">
-    <div class="Image"><p><img src="Project Strangers.jpg" width="100%"></p></div>
+    <div class="Image"><p><img src="Project QuadSIM.JPG" width="100%"></p></div>
     <div class="Paragraph">
-      <P> Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalties interact with each other and provide insight into potential problems or advantages. You can view our source code and androids app on the group's <a href="https://github.com/SNavleen/Stranger">Git</a></P></div>
+      <P> The project proceeded to win the Company API prize from Microsoft at a hackathon in Rutgers university(HACK RU). As a result my team and I got to meet a lot of representatives from different companies and get their opinion and feedback on our project. The source code to our project is publically available on the team <a href="https://github.com/SNavleen/QuadSim">GIT</a></P></div>
   </div>
 </div>
 <script type="text/javascript">
