--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <a href="https://www.facebook.com/McMasterSumoBot?fref=ts">  
     <div class="Attribute">
       <h2>
-        SuboBot 
+        SumoBot 
         <img src="Projects/SumoBot/Project SumoBot.jpg" width=100%>
       </h2>
     </div>
