changed some nitty gritty details and half of sumobot

--- a/Projects/SumoBot/index.html
+++ b/Projects/SumoBot/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Prakhar Garg</title>
+<title>McMaster Sumobot</title>
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -32,7 +32,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 <body>
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
+    <li>
+		<a class="MenuBarItemSubmenu" href="../../index.html">
+			Home
+		</a>
+	</li>
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
@@ -63,12 +67,12 @@ Do the following if you're using your customized build of modernizr (http://www.
   </ul>
 </div>
 <div class="Block" id="Strangers">
-  <h1>Strangers Android Application </h1>
+  <h1>McMaster SumoBot </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="Screen 1.png" width="100%"></p></div>
+		<div class="Image"><p><img src="Project Sumobot.jpg" width="100%"></p></div>
         <div class="Paragraph">
-			<P>Strangers is an android application developed by me and three of my peers at a hackathon in Duke University, HackDuke. The aim of the project was to develop a fun ecosystem for people to chat and communicate with strangers while using APIs provided by Facebook, FireBase and IBM. Over 24 hours my team and I planned and designed the app to scan your recent posts on facebook and pair you with someone who has the opposite personality as you. The aim of the app was to help connect people from different backgrounds and help the community appreciate the difference in personalties.</P>
+			<P>The McMaster Sumobot group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and  helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</P>
 		</div>
 	</div>
 
@@ -77,13 +81,14 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="LayoutDiv2">
     <div id="NudgeMe" class="Image"><p><img src="Screen 2.png" width="100%"></p></div>
     <div class="Paragraph">
-      <P> While developing Strangers with my team I gained a lot of first hand experience and mentorship working with the Google android SDK and learning the basics of how to develop the front end of the application. The data we received from Facebook was packaged as a JSON file. Our app repackaged the file to better work with IBM's Bluemix servers. In Bluemix I learned how to code in node.js and interface with Watson. Watson was the computation engine responsible for analusing the data packets sent to bluemix and respond with a personality profile. The data was used to pair users who ere directed to a firebase script that allowed us to quickly set up a messenger feed between two users.</p></div>
+      <P>I was the Vice Presidents of Parts in the club. I was responsible for creating an economic kit of parts for each team that competed. I had to stay in regular communication with the Vice President of Finance and the President of the club to ensure that the parts being ordered were within the clubs budget. While performing my duties I learned about the many hardware and electronics distributors in the Greater Toronto and Hamilton Area. My primary focus at the club was to ensure that all the teams received quality parts sufficient to build an average robot.
+	  </p></div>
   </div>
   
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="Project Strangers.jpg" width="100%"></p></div>
     <div class="Paragraph">
-      <P> Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalties interact with each other and provide insight into potential problems or advantages. You can view our source code and androids app on the group's <a href="https://github.com/SNavleen/Stranger">Git</a></P></div>
+      <P> </P></div>
   </div>
 </div>
 <script type="text/javascript">
