--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 <h1 style="color:#FF0000;background-color:#00FF66;">This website is currently under construction</h1>
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
+    <li>
+		<a class="MenuBarItemSubmenu" href="index.html">
+			Home
+		</a>
+	</li>
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
@@ -47,7 +51,10 @@ Do the following if you're using your customized build of modernizr (http://www.
 		</a></li>	
 		<li><a href="Projects/QuadSim/index.html">
 			QuadSIM
-		</a></li>			
+		</a></li>	
+		<li><a href="Projects/SumoBot/index.html">
+			SumoBot
+		</a></li>		
         <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
@@ -66,9 +73,6 @@ Do the following if you're using your customized build of modernizr (http://www.
         </li>
         <li><a href="#">Skills Robotics</a></li>
         <li><a href="#">F1 in Schools</a></li>
-        <li><a href="#">McMaster Sumobot</a></li>
-
-        <li><a href="#">Untitled Item</a></li>
       </ul>
     </li>
     <li><a href="#">Contact</a></li>
