--- a/Projects/EcoCAR/index.html
+++ b/Projects/EcoCAR/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Prakhar Garg</title>
+<title>McMaster EcoCAR3</title>
 <link href="../../boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
