better linking to projects and back

--- a/Projects/FormulaHybrid/index.html
+++ b/Projects/FormulaHybrid/index.html
@@ -32,11 +32,30 @@ Do the following if you're using your customized build of modernizr (http://www.
 <body>
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
+    <li>
+		<a class="MenuBarItemSubmenu" href="../../index.html">
+			Home
+		</a>
+	</li>
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics1</a>
+		<li><a href="../EcoCAR/index.html">
+			McMaster EcoCar3
+		</a></li>
+		<li><a href="../FormulaHybrid/index.html">
+			McMaster Formula Hybrid
+		</a></li>
+        <li><a href="../Strangers/index.html">
+			Strangers App
+		</a></li>	
+		<li><a href="../QuadSim/index.html">
+			QuadSIM
+		</a></li>	
+		<li><a href="../SumoBot/index.html">
+			SumoBot
+		</a></li>		
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
             <li><a href="#">Blizzard XI</a></li>
@@ -52,16 +71,17 @@ Do the following if you're using your customized build of modernizr (http://www.
             <li><a href="#">2012</a></li>
           </ul>
         </li>
+        <li><a href="http://velocitaracing.weebly.com/">
+				F1 in Schools
+		</a></li>
         <li><a href="#">Skills Robotics</a></li>
-        <li><a href="#">F1 in Schools</a></li>
-        <li><a href="#">McMaster Sumobot</a></li>
-        <li><a href="#">McMaster Formula Hybrid</a></li>
-        <li><a href="#">Untitled Item</a></li>
+
       </ul>
     </li>
     <li><a href="#">Contact</a></li>
   </ul>
 </div>
+
 <div class="Block" id="EcoCAR">
   <h1>Formula Hybrid </h1>
       <div id="LayoutDiv1">
@@ -77,11 +97,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Paragraph">
       <P>As a part of the <a href="http://www.formulahybrid.ca/#">McMaster Formula Hybrid team</a> I was able to work on the software and in turn help improve the performance of the car.I was responsible for working on the algorithm to detect and correct for the wheel slipping during acceleration and breaking events of the vehicle. I found this an excellent way to apply my knowledge of filters and real time systems from class. Filters were use to reduce noise in the system and help compensate for the sampling frequency that was limited by the speed of the CAN network of the vehicle. Unfortunately time constraints didn't allow for the proper testing of the software and a decision was made to not include the code during the competition to ensure the driver's safety.</P></div>
   </div>
-  
-
-   
-
-  
+    
   <div><p><img src="LaunchTractionControl.PNG" width="991"></p></div>
 
  
