--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Prakhar Garg</title>
+<title>QuadSim</title>
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -31,11 +31,30 @@ Do the following if you're using your customized build of modernizr (http://www.
 <body>
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
+    <li>
+		<a class="MenuBarItemSubmenu" href="../../index.html">
+			Home
+		</a>
+	</li>
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics1</a>
+		<li><a href="../EcoCAR/index.html">
+			McMaster EcoCar3
+		</a></li>
+		<li><a href="../FormulaHybrid/index.html">
+			McMaster Formula Hybrid
+		</a></li>
+        <li><a href="../Strangers/index.html">
+			Strangers App
+		</a></li>	
+		<li><a href="../QuadSim/index.html">
+			QuadSIM
+		</a></li>	
+		<li><a href="../SumoBot/index.html">
+			SumoBot
+		</a></li>		
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
             <li><a href="#">Blizzard XI</a></li>
@@ -51,16 +70,18 @@ Do the following if you're using your customized build of modernizr (http://www.
             <li><a href="#">2012</a></li>
           </ul>
         </li>
+        <li><a href="http://velocitaracing.weebly.com/">
+				F1 in Schools
+		</a></li>
         <li><a href="#">Skills Robotics</a></li>
-        <li><a href="#">F1 in Schools</a></li>
-        <li><a href="#">McMaster Sumobot</a></li>
-        <li><a href="#">McMaster Formula Hybrid</a></li>
-        <li><a href="#">Untitled Item</a></li>
+
       </ul>
     </li>
     <li><a href="#">Contact</a></li>
   </ul>
 </div>
+
+
 <div class="Block" id="Strangers">
   <h1>Quad Sim </h1>
 
