--- a/Projects/Strangers/index.html
+++ b/Projects/Strangers/index.html
@@ -32,11 +32,30 @@ Do the following if you're using your customized build of modernizr (http://www.
 <body>
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a class="MenuBarItemSubmenu" href="#">Home</a></li>
+    <li>
+		<a class="MenuBarItemSubmenu" href="../../index.html">
+			Home
+		</a>
+	</li>
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics1</a>
+		<li><a href="../EcoCAR/index.html">
+			McMaster EcoCar3
+		</a></li>
+		<li><a href="../FormulaHybrid/index.html">
+			McMaster Formula Hybrid
+		</a></li>
+        <li><a href="../Strangers/index.html">
+			Strangers App
+		</a></li>	
+		<li><a href="../QuadSim/index.html">
+			QuadSIM
+		</a></li>	
+		<li><a href="../SumoBot/index.html">
+			SumoBot
+		</a></li>		
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
             <li><a href="#">Blizzard XI</a></li>
@@ -52,16 +71,17 @@ Do the following if you're using your customized build of modernizr (http://www.
             <li><a href="#">2012</a></li>
           </ul>
         </li>
+        <li><a href="http://velocitaracing.weebly.com/">
+				F1 in Schools
+		</a></li>
         <li><a href="#">Skills Robotics</a></li>
-        <li><a href="#">F1 in Schools</a></li>
-        <li><a href="#">McMaster Sumobot</a></li>
-        <li><a href="#">McMaster Formula Hybrid</a></li>
-        <li><a href="#">Untitled Item</a></li>
+
       </ul>
     </li>
     <li><a href="#">Contact</a></li>
   </ul>
 </div>
+
 <div class="Block" id="Strangers">
   <h1>Strangers Android Application </h1>
 
