--- a/Projects/SumoBot/index.html
+++ b/Projects/SumoBot/index.html
@@ -40,7 +40,22 @@ Do the following if you're using your customized build of modernizr (http://www.
     <li><a href="#">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics1</a>
+		<li><a href="../EcoCAR/index.html">
+			McMaster EcoCar3
+		</a></li>
+		<li><a href="../FormulaHybrid/index.html">
+			McMaster Formula Hybrid
+		</a></li>
+        <li><a href="../Strangers/index.html">
+			Strangers App
+		</a></li>	
+		<li><a href="../QuadSim/index.html">
+			QuadSIM
+		</a></li>	
+		<li><a href="../SumoBot/index.html">
+			SumoBot
+		</a></li>		
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
             <li><a href="#">Blizzard X</a></li>
             <li><a href="#">Blizzard XI</a></li>
@@ -56,23 +71,25 @@ Do the following if you're using your customized build of modernizr (http://www.
             <li><a href="#">2012</a></li>
           </ul>
         </li>
+        <li><a href="http://velocitaracing.weebly.com/">
+				F1 in Schools
+		</a></li>
         <li><a href="#">Skills Robotics</a></li>
-        <li><a href="#">F1 in Schools</a></li>
-        <li><a href="#">McMaster Sumobot</a></li>
-        <li><a href="#">McMaster Formula Hybrid</a></li>
-        <li><a href="#">Untitled Item</a></li>
+
       </ul>
     </li>
     <li><a href="#">Contact</a></li>
   </ul>
 </div>
+
+
 <div class="Block" id="Strangers">
   <h1>McMaster SumoBot </h1>
 
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Project Sumobot.jpg" width="100%"></p></div>
         <div class="Paragraph">
-			<P>The McMaster Sumobot group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and  helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</P>
+			<P>The <a href="https://www.facebook.com/McMasterSumoBot?fref=ts"> McMaster SumoBot </a> group was founded by Vinay Yuvashankar as an effort to help the Mechatronics Engineering students at McMaster to gain more practical experience in the field. Over the past two years I have competed in and  helped organise the event. The event helped me learn a lot about how a club at McMaster operates. I got first had experience in filing out the necessary paperwork and creating proper documentation to ensure that others can perform my duties once I have graduated.</P>
 		</div>
 	</div>
 
