--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a class="MenuBarItemSubmenu" href="index.html">
+		<a href="index.html">
 			Home
 		</a>
 	</li>
-    <li><a href="#">Interests</a></li>
+    <li><a href="#" class="MenuBarItemSubmenu">Interests</a></li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
 		<li><a href="Projects/EcoCAR/index.html">
@@ -71,8 +71,11 @@ Do the following if you're using your customized build of modernizr (http://www.
             <li><a href="#">2012</a></li>
           </ul>
         </li>
+        <li><a href="http://velocitaracing.weebly.com/">
+				F1 in Schools
+		</a></li>
         <li><a href="#">Skills Robotics</a></li>
-        <li><a href="#">F1 in Schools</a></li>
+
       </ul>
     </li>
     <li><a href="#">Contact</a></li>
@@ -147,7 +150,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="https://www.facebook.com/McMasterSumoBot?fref=ts">  
+  <a href="Projects/SumoBot/index.html">  
     <div class="Attribute">
       <h2>
         SumoBot 
