--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div class="Attribute">
     <h2>
       Photography
+	  <img src="Interests/Photography/Interests Photography.jpg">
     </h2>
   </div>
 </div>
