making sure everything is up

--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@ Do the following if you're using your customized build of modernizr (http://www.
 			Home
 		</a>
 	</li>
-    <li><a href="#" class="MenuBarItemSubmenu">Interests</a></li>
+    <li><a class="MenuBarItemSubmenu" href="#" >Interests</a>
+		<ul>
+			<li><a href="#">
+				Origami
+			</a></li>
+			<li><a href="#">
+				Travelling
+			</a></li>
+			<li><a href="#">
+				Robots
+			</a></li>
+			<li><a href="#">
+				Photography
+			</a></li>
+			</ul>
+	</li>
     <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
 		<li><a href="Projects/EcoCAR/index.html">
